@@ -1,4 +1,4 @@
-.TH FMTUTIL 1 "June 2011" "TeX Live" "TeX Live"
+.TH FMTUTIL 1 "July 2014" "TeX Live" "TeX Live"
 .SH "NAME"
 fmtutil \- utility for maintaining TeX format files
 .PP
@@ -13,7 +13,8 @@ fmtutil-sys \- utility for maintaining TeX format files system\-wide
 .I COMMAND
 .SH "DESCRIPTION"
 \fBfmtutil\fP is used to create or recreate format and hyphenation
-files or show information about format files\&.
+files or show information about format files\&.  The directory in which
+\fBfmtutil\fP is found is also preferentially used to find subprograms.
 .PP
 \fICOMMAND\fP is one of:
 .PP
@@ -88,6 +89,10 @@ directory for format files generated by
 .B --no-engine-subdir
 don't use engine-specific subdir of the fmtdir
 .TP
+.BI --no-error-if-no-engine \ engine1,engine2,...
+exit successfully even if the required engine is missing, if that engine
+is included in the list here.
+.TP
 .B --no-error-if-no-format
 exit successfully if no format is selected
 .TP
@@ -99,15 +104,23 @@ be silent
 .SH "FILES"
 .TP
 .I fmtutil\&.cnf
-default configuration file
+default configuration file; run \fIkpsewhich fmtutil.cnf\fP to see the
+active file.
+.PP
+The command \fIkpsewhich --engine=/ --all foo.fmt\fP  should show the
+locations of any and all \fIfoo.fmt\fP files.
+.PP
+For more information about fmt generation in TeX Live, try
+"tlmgr --help" or see http://tug.org/texlive/doc/tlmgr.html.
+The "generate" action in tlmgr does the work.
 .SH "SEE ALSO"
 .BR kpsewhich (1)
 .SH "BUGS"
-None known, but report any bugs found to <tex-k@tug.org> (mailing list).
+Please send bug reports to <tex-k@tug.org> (public mailing list).
 .SH "AUTHOR"
-\fBfmtutil\fP was written by Thomas Esser
-<te@dbs\&.uni-hannover\&.de> and is in the public domain.
+\fBfmtutil\fP was originally written by Thomas Esser
+and is in the public domain.  It is now maintained as part of TeX Live.
 .PP
-This manual page was written by C\&.M\&. Connelly
-<c@eskimo\&.com>, for
-the Debian GNU/Linux system and later slightly adapted for the teTeX 3 release\&.
+This manual page was written by C\&.M\&. Connelly <c@eskimo\&.com>, for
+the Debian GNU/Linux system and later slightly adapted for the teTeX 3
+release\&.
