@@ -12,9 +12,10 @@ texconfig-sys \- configures teTeX or TeX Live system\-wide
 .B texconfig-sys
 .SH DESCRIPTION
 .I texconfig
-allows one to configure and maintain TeX
-in an easy and convenient manner, offering a series of dialog boxes to
-the user.
+allows one to configure and maintain TeX in an easy and convenient
+manner, offering a series of dialog boxes to the user.  The directory in
+which \fItexconfig\fP is found is also preferentially used to find
+subprograms.
 .PP
 The
 .I tlmgr
